kustomize/components/service-mesh-istio/frontend.yaml
# Creates the Istio DestinationRule and VirtualService used by Argo Rollouts for 
# traffic splitting. Instead of replica-based canary, traffic will be routed by Istio.
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend.boutique.svc.cluster.local
  subsets:
    - name: stable
      labels:
        app: frontend
    - name: canary
      labels:
        app: frontend
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
    - frontend.boutique.svc.cluster.local
  http:
    - name: primary
      route:
        - destination:
            host: frontend.boutique.svc.cluster.local
            subset: stable
            port:
              number: 80
          weight: 100
        - destination:
            host: frontend.boutique.svc.cluster.local
            subset: canary
            port:
              number: 80
          weight: 0
