kustomize/components/service-mesh-istio/recommendationservice-fault-injection.yaml
# Istio VirtualService for recommendationservice fault injection.
# This simulates latency so we can test application resilience without breaking real infrastructure.
# Current rule adds 2 seconds delay to 20% of traffic going to recommendationservice.
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: recommendationservice-fault-injection
spec:
  hosts:
    - recommendationservice
  http:
    - fault:
        delay:
          percentage:
            value: 20
          fixedDelay: 2s
      route:
        - destination:
            host: recommendationservice
            port:
              number: 8080
