kustomize/components/service-mesh-istio/cartservice-authorization-policy.yaml
# Istio AuthorizationPolicy for cartservice.
# Allows only frontend and checkoutservice to call cartservice.
# This protects cart APIs from unnecessary service-to-service access.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: cartservice-allow-required-callers
spec:
  selector:
    matchLabels:
      app: cartservice
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/boutique/sa/frontend
              - cluster.local/ns/boutique/sa/checkoutservice
