kustomize/components/service-mesh-istio/frontend-authorization-policy.yaml
# Istio AuthorizationPolicy for frontend.
# Allows external traffic from Istio ingressgateway and internal traffic
# from loadgenerator to reach frontend.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: frontend-allow-ingressgateway
spec:
  selector:
    matchLabels:
      app: frontend
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - istio-system
        - source:
            principals:
              - cluster.local/ns/boutique/sa/loadgenerator # Allow load testing traffic from loadgenerator
