kustomize/components/service-mesh-istio/redis-cart-authorization-policy.yaml
# Istio AuthorizationPolicy for redis-cart.
# Allows only cartservice to call redis-cart.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: redis-cart-allow-cartservice
spec:
  selector:
    matchLabels:
      app: redis-cart
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/boutique/sa/cartservice
