kustomize/components/service-mesh-istio/shippingservice-authorization-policy.yaml
# Istio AuthorizationPolicy for shippingservice.
# Allows only frontend and checkoutservice to call shippingservice.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: shippingservice-allow-required-callers
spec:
  selector:
    matchLabels:
      app: shippingservice
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/boutique/sa/frontend
              - cluster.local/ns/boutique/sa/checkoutservice
